fixed how homepage looks on collapse

--- a/devU-client/src/components/pages/courses/courseDetailPage.scss
+++ b/devU-client/src/components/pages/courses/courseDetailPage.scss
@@ -55,7 +55,6 @@
     height: 100%;
     padding: 0;
     overflow: hidden;
-    margin-bottom: 20px;
 
     text-decoration: none;
     border-radius: 200px;
