--- a/devU-client/src/components/pages/homePage/homePage.scss
+++ b/devU-client/src/components/pages/homePage/homePage.scss
@@ -88,4 +88,12 @@
         flex-direction: column;
         align-items: center;
     }
+    .header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .buttonContainer{
+        margin-left: 0;
+    }
 }
